--- a/lecture3/tasks/templates/tasks/index.html
+++ b/lecture3/tasks/templates/tasks/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>tasks</title>
-    </head>
-    <body>
-        <ul>
-            {% for task in tasks %}
-                <li>{{ task }}</li>
-            {% endfor %}
-        </ul>
-    </body>
-</html>
+{% extends "tasks/layout.html" %}
+
+{% block body %}
+    <ul>
+         {% for task in tasks %}
+             <li>{{ task }}</li>
+         {% endfor %}
+     </ul>
+     <a href="{% url 'add' %}">Add a New Task</a>
+{% endblock %}
